# ocp-diag-core-cpp

./: .gitignore  MODULE.bazel  README.md
.github/actions/bazel-container/: action.yml
.github/workflows/: tests.yml
ci_scripts/: run_bazel_tests.sh
docker/install/: python-requirements.in  python-requirements.txt
ocpdiag/: BUILD  build_deps.bzl  debian.bzl  embed.bzl
ocpdiag/core/compat/: status_macros.h
ocpdiag/core/examples/ocp_diag_ssd_osv/: BUILD.bazel  README.md  ocp_diag_ssd_osv_main.cc
ocpdiag/core/examples/ocp_diag_ssd_osv/app/: BUILD.bazel  ocp_diag_ssd_osv_app.cc  ocp_diag_ssd_osv_app.h  ocp_diag_ssd_osv_exception.cc  ocp_diag_ssd_osv_exception.h
ocpdiag/core/examples/ocp_diag_ssd_osv/app/command/: bad_argument_exception.cc  bad_argument_exception.h  command_parser_manager.cc  command_parser_manager.h  command_parser_manager_test.cc  ocp_diag_ssd_osv_test_properties.cc  ocp_diag_ssd_osv_test_properties.h
ocpdiag/core/examples/ocp_diag_ssd_osv/app/command/command_parser/: command_parser_interface.cc  command_parser_interface.h  command_parser_test_define.h  target_disks_command_parser.cc  target_disks_command_parser.h  target_disks_command_parser_test.cc  test_type_command_parser.cc  test_type_command_parser.h  test_type_command_parser_test.cc
ocpdiag/core/examples/ocp_diag_ssd_osv/app/diagnosis/: diagnostic_manager.cc  diagnostic_manager.h
ocpdiag/core/examples/ocp_diag_ssd_osv/app/diagnosis/diagnostic_log/: diagnostic_error_log.cc  diagnostic_error_log.h  diagnostic_log_base.cc  diagnostic_log_base.h  diagnostic_measurement_log.cc  diagnostic_measurement_log.h  diagnostic_process_log.cc  diagnostic_process_log.h  diagnostic_result_log.cc  diagnostic_result_log.h
ocpdiag/core/examples/ocp_diag_ssd_osv/app/diagnosis/diagnostic_providers/: storage_diagnostic_provider_interface.cc  storage_diagnostic_provider_interface.h
ocpdiag/core/examples/ocp_diag_ssd_osv/app/diagnosis/diagnostic_providers/identify/nvme/: nvme_check_identify_diagnostic_provider.cc  nvme_check_identify_diagnostic_provider.h  nvme_check_identify_diagnostic_provider_test.cc
ocpdiag/core/examples/ocp_diag_ssd_osv/app/diagnosis/diagnostic_providers/io/: io_diagnostic_provider.cc  io_diagnostic_provider.h  io_diagnostic_provider_test_nvme.cc
ocpdiag/core/examples/ocp_diag_ssd_osv/app/diagnosis/diagnostic_providers/io/io_scenario/: io_test_option.cc  io_test_option.h  io_test_strategy_base.cc  io_test_strategy_base.h  io_test_strategy_random_timebased.cc  io_test_strategy_random_timebased.h
ocpdiag/core/examples/ocp_diag_ssd_osv/app/diagnosis/diagnostic_providers/smart/nvme/: nvme_check_smart_diagnostic_provider.cc  nvme_check_smart_diagnostic_provider.h  nvme_check_smart_diagnostic_provider_test.cc
ocpdiag/core/examples/ocp_diag_ssd_osv/core/: BUILD.bazel
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/: BUILD.bazel
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_command/: storage_command_base.cc  storage_command_base.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_command/nvme/: storage_nvme_command_base.cc  storage_nvme_command_base.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_command/nvme/admin/: storage_nvme_admin_command_base.cc  storage_nvme_admin_command_base.h  storage_nvme_command_get_log_page_base.cc  storage_nvme_command_get_log_page_base.h  storage_nvme_command_get_log_page_smart_health_info.cc  storage_nvme_command_get_log_page_smart_health_info.h  storage_nvme_command_get_log_page_smart_health_info_data.cc  storage_nvme_command_get_log_page_smart_health_info_data.h  storage_nvme_command_identify_controller.cc  storage_nvme_command_identify_controller.h  storage_nvme_command_identify_namespace.cc  storage_nvme_command_identify_namespace.h  storage_nvme_identify_command_base.cc  storage_nvme_identify_command_base.h  storage_nvme_identify_controller_data.cc  storage_nvme_identify_controller_data.h  storage_nvme_identify_namespace_data.cc  storage_nvme_identify_namespace_data.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_command/nvme/io/: storage_nvme_io_command_base.cc  storage_nvme_io_command_base.h  storage_nvme_read_command.cc  storage_nvme_read_command.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_command/storage_command_result/: storage_command_result_base.cc  storage_command_result_base.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_command/storage_command_result/nvme/: storage_nvme_command_result.cc  storage_nvme_command_result.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_controller/: fake_nvme_storage_controller.cc  fake_nvme_storage_controller.h  mock_nvme_storage_controller.cc  mock_nvme_storage_controller.h  nvme_storage_controller_base.cc  nvme_storage_controller_base.h  nvme_storage_controller_linux_inbox.cc  nvme_storage_controller_linux_inbox.h  storage_controller_base.cc  storage_controller_base.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_model/: nvme_storage_info.cc  nvme_storage_info.h  storage_info_base.cc  storage_info_base.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_scanner/: storage_fixture.cc  storage_fixture.h  storage_scan_manager.cc  storage_scan_manager.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage/storage_scanner/nvme/: nvme_storage_scanner_interface.cc  nvme_storage_scanner_interface.h  nvme_storage_scanner_linux_inbox.cc  nvme_storage_scanner_linux_inbox.h
ocpdiag/core/examples/ocp_diag_ssd_osv/core/utils/: BUILD.bazel  BigInt.cpp  BigInt.hpp  RAIIHandle.h  buffer_utils.cc  buffer_utils.h  buffer_utils_test.cc  thread_manager.cc  thread_manager.h
ocpdiag/core/hwinterface/: BUILD  accelerator.proto  config.proto  cpu.proto  ec.proto  eeprom.proto  error.proto  fan.proto  firmware.proto  gpu.proto  identifier.proto  interface.proto  memory.proto  networkinterface.proto  node.proto  psu.proto  securitychip.proto  sensor.proto  service.proto  service_flags.cc  service_flags.h  service_interface.h  service_interface_test.cc  storage.proto  system.proto
(+88 files in other folders)
