licenses(["notice"])

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ocp_diag_ssd_osv_app",
    srcs = [
        "command/command_parser/command_parser_interface.cc",
        "command/command_parser/target_disks_command_parser.cc",
        "command/command_parser/test_type_command_parser.cc",
        "command/command_parser_manager.cc",
        "command/bad_argument_exception.cc",
        "command/ocp_diag_ssd_osv_test_properties.cc",
        "diagnosis/diagnostic_log/diagnostic_error_log.cc",
        "diagnosis/diagnostic_log/diagnostic_log_base.cc",
        "diagnosis/diagnostic_log/diagnostic_measurement_log.cc",
        "diagnosis/diagnostic_log/diagnostic_process_log.cc",
        "diagnosis/diagnostic_log/diagnostic_result_log.cc",
        "diagnosis/diagnostic_providers/identify/nvme/nvme_check_identify_diagnostic_provider.cc",
        "diagnosis/diagnostic_providers/io/io_diagnostic_provider.cc",
        "diagnosis/diagnostic_providers/io/io_scenario/io_test_option.cc",
        "diagnosis/diagnostic_providers/io/io_scenario/io_test_strategy_base.cc",
        "diagnosis/diagnostic_providers/io/io_scenario/io_test_strategy_random_timebased.cc",
        "diagnosis/diagnostic_providers/smart/nvme/nvme_check_smart_diagnostic_provider.cc",
        "diagnosis/diagnostic_providers/storage_diagnostic_provider_interface.cc",
        "diagnosis/diagnostic_manager.cc",
        "ocp_diag_ssd_osv_exception.cc",
        "ocp_diag_ssd_osv_app.cc",
    ],
    hdrs = [
        "command/command_parser/command_parser_interface.h",
        "command/command_parser/target_disks_command_parser.h",
        "command/command_parser/test_type_command_parser.h",
        "command/command_parser_manager.h",
        "command/command_parser/command_parser_test_define.h",
        "command/bad_argument_exception.h",
        "command/ocp_diag_ssd_osv_test_properties.h",
        "diagnosis/diagnostic_log/diagnostic_error_log.h",
        "diagnosis/diagnostic_log/diagnostic_log_base.h",
        "diagnosis/diagnostic_log/diagnostic_measurement_log.h",
        "diagnosis/diagnostic_log/diagnostic_process_log.h",
        "diagnosis/diagnostic_log/diagnostic_result_log.h",
        "diagnosis/diagnostic_providers/identify/nvme/nvme_check_identify_diagnostic_provider.h",
        "diagnosis/diagnostic_providers/io/io_diagnostic_provider.h",
        "diagnosis/diagnostic_providers/io/io_scenario/io_test_option.h",
        "diagnosis/diagnostic_providers/io/io_scenario/io_test_strategy_base.h",
        "diagnosis/diagnostic_providers/io/io_scenario/io_test_strategy_random_timebased.h",
        "diagnosis/diagnostic_providers/smart/nvme/nvme_check_smart_diagnostic_provider.h",
        "diagnosis/diagnostic_providers/storage_diagnostic_provider_interface.h",
        "diagnosis/diagnostic_manager.h",
        "ocp_diag_ssd_osv_exception.h",
        "ocp_diag_ssd_osv_app.h",
    ],
    deps = [
        "//ocpdiag/core/examples/ocp_diag_ssd_osv/core:ocp_diag_ssd_osv_core_lib",
        "//ocpdiag/core/results:artifact_writer",
        "//ocpdiag/core/results:measurement_series",
        "//ocpdiag/core/results:test_run",
        "//ocpdiag/core/results:test_step",
        "//ocpdiag/core/results/data_model:dut_info",
        "//ocpdiag/core/results/data_model:input_model",
    ]
)

cc_test(
    name = "command_parser_test",
    size = "small",
    srcs =
        ["command/command_parser/target_disks_command_parser_test.cc",
        "command/command_parser/test_type_command_parser_test.cc",
        "command/command_parser_manager_test.cc",
        "diagnosis/diagnostic_providers/identify/nvme/nvme_check_identify_diagnostic_provider_test.cc",
        "diagnosis/diagnostic_providers/smart/nvme/nvme_check_smart_diagnostic_provider_test.cc",
        "diagnosis/diagnostic_providers/io/io_diagnostic_provider_test_nvme.cc",
    ],
    deps = [
        "//ocpdiag/core/examples/ocp_diag_ssd_osv/core:ocp_diag_ssd_osv_core_lib",
        "//ocpdiag/core/examples/ocp_diag_ssd_osv/core/storage:ocp_diag_ssd_osv_core_storage_testing_lib",
        "//ocpdiag/core/examples/ocp_diag_ssd_osv/app:ocp_diag_ssd_osv_app",
        "//ocpdiag/core/results:output_receiver",
        "//ocpdiag/core/results:artifact_writer",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)
